syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resources";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/common/common.proto";

package dev.multy.resources;

message CreateObjectStorageRequest {
  repeated CloudSpecificObjectStorageArgs resources = 1;
}

message ReadObjectStorageRequest {
  string resource_id = 1;
}

message UpdateObjectStorageRequest {
  string resource_id = 1;
  repeated CloudSpecificObjectStorageArgs resources = 2;
}

message DeleteObjectStorageRequest {
  string resource_id = 1;
}

message CloudSpecificObjectStorageArgs {
  common.CloudSpecificResourceCommonArgs common_parameters = 1;
  string name = 2;
}

message CloudSpecificObjectStorageResource {
  common.CloudSpecificCommonResourceParameters common_parameters = 1;
  string name = 2;
}

message ObjectStorageResource {
  common.CommonResourceParameters common_parameters = 1;
  repeated CloudSpecificObjectStorageResource resources = 2;
}
